@@ -1,2 +1,60 @@
 # Attack-on-Titans
-**Attack on Titans: Utopia** is a thrilling one-player, endless tower defense game inspired by the *Attack on Titan* anime. In a world where humanity fights to protect the last remaining safe zones from towering titans, you must defend the Utopia District walls using an arsenal of anti-titan weapons.
+
+## Description
+**Attack on Titan: Utopia** is a thrilling one-player, endless tower defense game inspired by the *Attack on Titan* anime. In a world where humanity fights to protect the last remaining safe zones from towering titans, you must defend the Utopia District walls using an arsenal of anti-titan weapons.
+
+## 🌟 Features
+- **Endless Gameplay**: No winning condition—defend as long as possible.
+- **Game Modes**: easy mode with 3 lanes and hard mode with 5 lanes.
+- **Multiple Titan Types**: Pure, Abnormal, Armored, and Colossal Titans, each with unique traits.
+- **Dynamic Battle Phases**: As turns progress, the intensity of the battle escalates, introducing new challenges.
+- **Weapon Variety**: Deploy different weapons, including Piercing Cannons, Sniper Cannons, Volley Spread Cannons, and wall trap, each with different damage capabilities and techniques.
+- **Resource Management**: Gather resources by defeating titans to purchase and deploy weapons.
+- **Lane Defense**: Protect the Utopia District by strategically placing weapons to counter incoming titans.
+ 
+ ## 🎮 How to Play
+1. **Start the Game**
+2. **Choose game mode**
+3. **Deploy Weapons**: 
+   - Use gathered resources to purchase and deploy weapons into any active lane.
+   - Weapons attack Titans automatically every turn.
+4. **End Your Turn**: After deploying a weapon or skipping a turn:
+   - Titans move closer to the wall.
+   - Weapons attack Titans.
+   - Titans attack walls if they have reached the end of the lane.
+5. **Monitor Resources and HP**:
+   - Keep track of Titan HP, wall HP, and resources.
+   - Use resources strategically to survive longer
+
+## 🎯 Winning and Losing
+- **No Winning Condition**: Play endlessly and defeat as many Titans as possible.
+- **Losing Condition**: The game ends when all wall parts are destroyed.
+
+
+## 💻 Technologies Used
+  - **Java**
+  - **JavaFX** (for GUI)
+  - **Object-Oriented Programming (OOP)** principles
+  - **CSS** for enchanting UI features
+
+## 🚀 Installation Guidelines
+
+**Prerequisites:**  
+- JDK 11+  
+- Eclipse IDE  
+- JavaFX SDK
+
+**Steps:**
+1. Install JDK and Eclipse from their respective sites.
+2. Download and unzip the JavaFX SDK.
+3. Clone or download the project.
+4. In Eclipse, add JavaFX SDK to `User Libraries`.
+5. In **Run Configurations**, add VM options:
+   ```bash
+   --module-path "path/to/javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml,javafx.media
+6. **Run the Project:**  
+   - Run or debug the project as usual in Eclipse.
+
+## 🎥 Take a Look
+Want a quick overview of the game? Watch the demo video here:
+[Watch the Gameplay Demo](https://drive.google.com/drive/folders/1EN0OTzOi4WIc1xuh6ugPT4h9xvV72wZ4?usp=drive_link)
